--- a/views/header.ejs
+++ b/views/header.ejs
@@ -46,13 +46,24 @@
             position: absolute;
             display: inline-block;
         }
+        .dropdown-right{
+            position: absolute;
+            display: inline-block;
+        }
 
         .dropdown-menu a:hover {
             background-color: #ddd;
             color: coral;
         }
+        .dropdown-menu-right a:hover {
+            background-color: #ddd;
+            color: coral;
+        }
 
         .dropdown:hover .dropdown-menu {
+            display: block;
+        }
+        .dropdown-right:hover .dropdown-menu-right {
             display: block;
         }
 
@@ -62,11 +73,23 @@
         .dropdown :hover{
             color: coral;
         }
+        .dropdown-right{
+            font-weight: bold;
+        }
+        .dropdown-right :hover{
+            color: coral;
+        }
         .nav.navbar-nav {
             font-weight: bold;
         }
 
         .dropdown .dropdown-menu a:hover{
+            font-weight: bold;
+            color: coral;
+            text-decoration: underline;
+        }
+
+        .dropdown-right .dropdown-menu-right a:hover{
             font-weight: bold;
             color: coral;
             text-decoration: underline;
@@ -86,9 +109,17 @@
             color: coral;
             text-decoration: underline;
         }
+        .dropdown-right a:hover{
+            color: coral;
+            text-decoration: underline;
+        }
 
         .navbar.navbar-dark.bg-dark a.icon{
             display: none;
+        }
+
+        .navbar.navbar-dark.bg-dark a.icon:hover{
+            color: coral;
         }
 
         @media screen and (max-width: 600px) {
@@ -101,6 +132,7 @@
             .navbar.navbar-dark.bg-dark a.icon{
                 float: left;
                 display: block;
+                top: 0;
             }
         }
 
@@ -121,11 +153,14 @@
     </style>
 </head>
 <body>
+    
     <nav class="navbar navbar-dark bg-dark" id="topMenu" style="background-color: #FFF;">
-        <div class="container-fluid">
-            <div class="navbar-header">
-                <a class="navbar-brand" href="/" style="color: black; font-weight: 800;">LEAGUE STORE 77</a>
-            </div>
+        <div class="navbar navbar-header">
+            <a class="navbar-brand" href="/">
+                <img src="/assets/logo.jpg" width="90px" height="60px" alt="League store 77">
+            </a>
+        </div>
+        <div class="container-fluid"> 
             <ul class="nav navbar-nav">
                 <li class="active"><a href="/">TRANG CHỦ</a></li>
                 <li>
@@ -235,7 +270,9 @@
                 </li>
             </ul>
         </div>
-        <a href="javascript:void(0);" class="icon" style="font-size: 30px; margin-left: 10px;" onclick="responsiveMenu()">&#9776;</a>
+        <a href="javascript:void(0);" class="icon" style="font-size: 35px; margin-left: 10px; color: black;" onclick="responsiveMenu()">
+            <i class="glyphicon glyphicon-menu-hamburger"></i>
+        </a>
     </nav>
     
     <script>
