--- a/views/index.ejs
+++ b/views/index.ejs
@@ -185,7 +185,7 @@
         </div>
     </div>
 
-    <%- include ('header', {user: user, products: products}); -%>
+    <%- include ('header'); -%>
     <%- include ('slideshow') -%>
 
     <div class="container" style="margin-top: 25px;">
