update responsive header

--- a/views/header.ejs
+++ b/views/header.ejs
@@ -130,9 +130,11 @@
                 position: relative;
             }
             .navbar.navbar-dark.bg-dark a.icon{
-                float: left;
+                float: right;
                 display: block;
-                top: 0;
+                top: 20px;
+                right: 20px;
+                position: absolute;
             }
         }
 
@@ -140,8 +142,8 @@
             .navbar.navbar-dark.bg-dark.responsive {position: relative;}
             .navbar.navbar-dark.bg-dark.responsive a.icon{
                 position:absolute;
-                right: 0;
-                top: 0;
+                right: 20px;
+                top: 20px;
             }
             .navbar.navbar-dark.bg-dark.responsive > .container-fluid > .nav.navbar-nav > li > a, .dropdown{
                 display: block;
