--- a/views/index.ejs
+++ b/views/index.ejs
@@ -160,6 +160,10 @@
         .banner-footer-item-des {
             display: none;
         }
+        .card-img-top{
+            width: 100%;
+            height: auto;
+        }
     </style>
 </head>
 
@@ -257,8 +261,8 @@
                                     </div>
                                 </div>
                             </div>
-                            <% } %>
-                        <%}%>
+                        <% } %>
+                    <%}%>
                 </div>
             </div>
 
