--- a/views/productdetail.ejs
+++ b/views/productdetail.ejs
@@ -10,6 +10,10 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
     <style>
 
+        #img {
+            width: 100%;
+            height: auto;
+        }
     </style>
 </head>
 
