--- a/views/home.ejs
+++ b/views/home.ejs
@@ -143,6 +143,11 @@
             display: none;
         }
 
+        .card-img-top{
+            width: 100%;
+            height: auto;
+        }
+
     </style>
 </head>
 
