update new arrival page

--- a/views/newarrivals.ejs
+++ b/views/newarrivals.ejs
@@ -116,7 +116,12 @@
             display: inline-block;
             vertical-align: middle;margin-right:5px;
         }
-        @keyframes h-alo-ring-ring{0%{transform:rotate(0deg) scale(1) skew(1deg)}10%{transform:rotate(-25deg) scale(1) skew(1deg)}20%{transform:rotate(25deg) scale(1) skew(1deg)}30%{transform:rotate(-25deg) scale(1) skew(1deg)}40%{transform:rotate(25deg) scale(1) skew(1deg)}50%{transform:rotate(0deg) scale(1) skew(1deg)}100%{transform:rotate(0deg) scale(1) skew(1deg)}}
+
+        .card-img-top{
+            width: 100%;
+            height: auto;
+        }
+
     </style>
 </head>
 
