--- a/views/home.ejs
+++ b/views/home.ejs
@@ -148,12 +148,23 @@
             height: auto;
         }
 
+        /* button xem them san pham */
+        .button-showmore .moreproduct {
+            padding: 7px 20px;
+            text-transform: uppercase;
+            border: 2px solid #000;
+            border-radius: 0;
+            font-size: 13px;
+            font-weight: bold;
+            color: #000 !important;
+            margin-left: 45%;
+        }
     </style>
 </head>
 
 <body>
     <div id="topbar">
-        <div class="container-fluid">
+        <div class="container-fluid" style="margin-left: 20px;">
             <div class="row">
                 <div class="col-md-6 col-sm-6 col-xs-12 topbar-content">
                     <p>
@@ -251,26 +262,13 @@
         </div>
     </div>
 
-    <div class="container">
-        <!-- get all number item from database then page panigate -->
-        <nav aria-label="Page navigation">
-            <ul class="pagination">
-                <li class="page-item">
-                    <a class="page-link" href="#">Previous</a>
-                </li>
-                <%for(var i=1; i<=numItems;i++) { %>
-                    <li class="page-item">
-                        <a class="page-link" href="/<%= i %>">
-                            <%= i %>
-                        </a>
-                    </li>
-                <% } %>
-                <li class="page-item">
-                    <a class="page-link" href="#">Next</a>
-                </li>
-            </ul>
-        </nav>
+    <br>
+    <div class="button-showmore">
+        <a href="/newarrivals" class="moreproduct button">
+            Xem thêm
+        </a>
     </div>
+    <br>
 
     <h2 class="populate_product">
         <a href="/newarrivals"> SẢN PHẨM BÁN CHẠY </a>
@@ -317,29 +315,14 @@
 
     </div>
 
-    <div class="container">
-        <!-- get all number item from database then page panigate -->
-        <nav aria-label="Page navigation">
-            <ul class="pagination">
-                <li class="page-item">
-                    <a class="page-link" href="#">Previous</a>
-                </li>
-                <%for(var i=1; i<=numItems;i++) { %>
-                    <li class="page-item">
-                        <a class="page-link" href="#">
-                            <%= i %>
-                        </a>
-                    </li>
-                <% } %>
-                <li class="page-item">
-                    <a class="page-link" href="#">Next</a>
-                </li>
-            </ul>
-        </nav>
-    </div>
+    <br>
+        <div class="button-showmore">
+            <a href="/newarrivals" class="moreproduct button">
+                Xem thêm
+            </a>
+        </div>
 
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
-    <script src="http://getbootstrap.com/dist/js/bootstrap.min.js"></script>
+        <br><br>
 
     <div class="container">
         <div class="info-bellow-product box-icon row">
