--- a/views/addproduct.ejs
+++ b/views/addproduct.ejs
@@ -89,7 +89,7 @@
                 <div class="col-md-6">
                     <% for(var i=0;i<images.length; i++) {%>
                         <div class="col-sm-12 col-lg-6">
-                            <img src="<%= images[i].name %>" onclick="sendurl(this)" style="margin-top: 5px; width:100%">
+                            <img src="products/<%= images[i].name %>" onclick="sendurl(this)" style="margin-top: 5px; width:100%">
                         </div>
                     <% } %>
                 </div>
