--- a/views/carts.ejs
+++ b/views/carts.ejs
@@ -8,82 +8,111 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
-    <script src="ejs.min.js"></script>
   </head>
   <body>
     <h2 style="text-align: center;">GIỎ HÀNG CỦA BẠN</h2>
-    <% if(products) {%>
-    <div class="row">
-        <div class="col-md-2"></div>
-        <div class="col-md-8">
-            <div class="list-group">
-                <table class="table table-bordered">
-                    <thead class="thead-dark">
-                        <tr>
-                            <th scope="col">Tên sản phẩm</th>
-                            <th scope="col">Size</th>
-                            <th scope="col">Chỉnh sửa</th>
-                            <th scope="col">Số lượng</th>
-                            <th scope="col">Tin nhắn</th>
-                            <th scope="col">Thành tiền</th>
-                        </tr>
-                    </thead>
-                    <tbody>
-                        <% var i = 0; %>
-                        <% products.forEach(function (product) { %>
+    <form method="POST" action="/order">
+        <% if(products) {%>
+        <div class="row">
+            <div class="col-md-2"></div>
+            <div class="col-md-8">
+                <div class="list-group">
+                    <table class="table table-bordered">
+                        <thead class="thead-dark">
                             <tr>
-                                <td>
-                                    <strong><%= product.item.name %></strong>
-                                </td>
-                                <td>
-                                    <strong><%= product.size %></strong>
-                                </td>
-                                <td>
-                                    <div class="btn-group">
-                                        <button type="button" class="btn btn-raised btn-info dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                                            Chỉnh sửa
-                                        </button>
-                                        <div class="dropdown-menu">
-                                            <a class="btn btn-primary" href="/carts/reduce/<%= product.item._id %>">Xóa một</a>
-                                            <a class="btn btn-danger" href="/carts/remove/<%= product.item._id %>">Xóa tất cả</a>
-                                        </div>
-                                    </div>
-                                </td>
-                                <td>
-                                    <span class="total"><%= product.qty %></span>
-                                </td>
-                                <td>
-                                    <span class="msg"><%= product.msg %></span>
-                                </td>
-                                <td>
-                                    <span class="badge price-cart"><%= product.price %></span>
-                                </td>
+                                <th scope="col">Tên sản phẩm</th>
+                                <th scope="col">Size</th>
+                                <th scope="col">Chỉnh sửa</th>
+                                <th scope="col">Số lượng</th>
+                                <th scope="col">Tin nhắn</th>
+                                <th scope="col">Thành tiền</th>
                             </tr>
-                        <% }); %>
-                    </tbody>
-                </table>
+                        </thead>
+                        <tbody>
+                            <% var i = 0; %>
+                            <% products.forEach(function (product) { %>
+                                <tr>
+                                    <td>
+                                        <strong><%= product.item.name %></strong>
+                                    </td>
+                                    <td>
+                                        <strong><%= product.size %></strong>
+                                    </td>
+                                    <td>
+                                        <div class="btn-group">
+                                            <button type="button" class="btn btn-raised btn-info dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                                                Chỉnh sửa
+                                            </button>
+                                            <div class="dropdown-menu">
+                                                <a class="btn btn-primary" href="/carts/reduce/<%= product.item._id %>">Xóa một</a>
+                                                <a class="btn btn-danger" href="/carts/remove/<%= product.item._id %>">Xóa tất cả</a>
+                                            </div>
+                                        </div>
+                                    </td>
+                                    <td>
+                                        <span class="total"><%= product.qty %></span>
+                                    </td>
+                                    <td>
+                                        <span class="msg"><%= product.msg %></span>
+                                    </td>
+                                    <td>
+                                        <span class="badge price-cart"><%= product.price %></span>
+                                    </td>
+                                </tr>
+                            <% }); %>
+                        </tbody>
+                    </table>
+                </div>
             </div>
         </div>
-    </div>
-    <div class="row">
-        <div class="col-md-2"></div>
-        <div class="col-md-8">
-            <strong>Tổng: <%= totalPrice.toLocaleString('it-IT', {style : 'currency', currency : 'VND'}); %> </strong>
+        <div class="row">
+            <div class="col-md-2"></div>
+            <div class="col-md-8">
+                <strong>Tổng: <%= totalPrice.toLocaleString('it-IT', {style : 'currency', currency : 'VND'}); %> </strong>
+            </div>
         </div>
-    </div>
-    <hr>
-    <div class="row">
-        <div class="col-md-2"></div>
-        <div class="col-md-8">
-            <a href="/checkout" class="btn btn-raised  btn-success">Đặt hàng</a>
+        <hr>
+        <!-- Thông tin người mua hàng -->
+        <div class="row">
+            <div class="col-md-2"></div>
+                <div class="col-md-6">
+                    <div class="form-group">
+                        <label for="guestName"> Họ và tên </label>
+                        <input type="text" name="guestName" class="form-control" id="guestName" placeholder="Họ và tên">
+                    </div>
+
+                    <div class="form-group">
+                        <label for="guestEmail">Thư điện tử</label>
+                        <input type="email" name="guestEmail" class="form-control" id="guestEmail" placeholder="Email">
+                    </div>
+
+                    <div class="form-group">
+                        <label for="guestPhone">Số điện thoại</label>
+                        <input type="text" id="guestPhone" name="guestPhone" class="form-control" placeholder="Số điện thoại"></input>
+                    </div>
+
+                    <div class="form-group">
+                        <label for="guestAddress">Địa chỉ</label>
+                        <input type="text" name="guestAddress" class="form-control" id="guestAddress" placeholder="Địa chỉ">
+                    </div>
+                </div>  
         </div>
-    </div>
-<% } else {%>
-    <div class="empty">
-        <h2>Oops, your cart is empty</h2>
-        <a href="/" class="btn btn-primary">Turn back home page</a>
-    </div>
-<% } %>
+        
+        <div class="row">
+            <div class="col-md-2"></div>
+            <div class="col-md-8">
+                <a href="/order" class="btn btn-raised  btn-success">Đặt hàng</a>
+                <a href="/" class="btn btn-raised  btn-success">Tiếp tục mua hàng</a>
+            </div>
+        </div>
+        <% } else {%>
+            <div class="empty">
+                <h2>Oops, Giỏ hàng của bạn chưa có sản phẩm nào</h2>
+                <a href="/" class="btn btn-primary">Quay về trang chủ</a>
+            </div>
+        <% } %>
+
+    </form>
 
     <script>
         function formatCash(cash){
