--- a/views/newarrivals.ejs
+++ b/views/newarrivals.ejs
@@ -149,66 +149,62 @@
 
     <%- include ('header'); -%>
     <h2 class="new_product">SẢN PHẨM MỚI</h2>
-    <div class="container">
-      <div class="card-deck">
-          <% if(product.length > 0) {%>
-              <%for(var i=0; i<product.length;i++) { %>
-                  <div class="col-sm-12 col-lg-4">
-                      <div class="card h-100">
-                          <a href="/productdetail/<%= product[i]._id %>" >
-                              <img class="card-img-top" src="<%= product[i].image %>" alt="Card image cap" >
-                          </a>
-                          <div class="card-body">
-                              <h5 class="card-title">
-                                  <%= product[i].name %>
-                              </h5>
-                              <p class="card-text">
-                                  <% if(product[i].bonusPrice > 0) { %>
-                                      <p>
-                                          <span class="line-through" style="font-size: 85%;">
-                                              <%= product[i].price.toLocaleString('it-IT', {style : 'currency', currency : 'VND'}); %>
-                                          </span>    
-                                          <span class="none" style="font-weight: 550;">
-                                              <%= product[i].bonusPrice.toLocaleString('it-IT', {style : 'currency', currency : 'VND'}); %>
-                                          </span>
-                                      </p>
+    <div class="card-deck">
+        <% if(product.length > 0) {%>
+            <%for(var i=0; i<product.length;i++) { %>
+                <div class="col-sm-12 col-lg-4">
+                    <div class="card h-100">
+                        <a href="/productdetail/<%= product[i]._id %>" >
+                            <img class="card-img-top" src="<%= product[i].image %>" alt="Card image cap" >
+                        </a>
+                        <div class="card-body">
+                            <h5 class="card-title">
+                                <%= product[i].name %>
+                            </h5>
+                            <p class="card-text">
+                                <% if(product[i].bonusPrice > 0) { %>
+                                    <p>
+                                        <span class="line-through" style="font-size: 85%;">
+                                            <%= product[i].price.toLocaleString('it-IT', {style : 'currency', currency : 'VND'}); %>
+                                        </span>    
+                                        <span class="none" style="font-weight: 550;">
+                                            <%= product[i].bonusPrice.toLocaleString('it-IT', {style : 'currency', currency : 'VND'}); %>
+                                        </span>
+                                    </p>
 
-                                      <% } else { %>
-                                          <p>
-                                              <span class="normal">
-                                                  <%= product[i].price.toLocaleString('it-IT', {style : 'currency', currency : 'VND'}); %>
-                                              </span>
-                                          </p>
-                                  <% } %>
-                              </p>
-                          </div>
-                      </div>
-                  </div>
-                  <% } %>
-              <%}%>
-      </div>
-  </div>
+                                    <% } else { %>
+                                        <p>
+                                            <span class="normal">
+                                                <%= product[i].price.toLocaleString('it-IT', {style : 'currency', currency : 'VND'}); %>
+                                            </span>
+                                        </p>
+                                <% } %>
+                            </p>
+                        </div>
+                    </div>
+                </div>
+                <% } %>
+            <%}%>
+    </div>
 
-  <div class="container">
-      <!-- get all number item from database then page panigate -->
-      <nav aria-label="Page navigation">
-          <ul class="pagination">
-              <li class="page-item">
-                  <a class="page-link" href="#">Previous</a>
-              </li>
-              <%for(var i=1; i<=numItems;i++) { %>
-                  <li class="page-item">
-                      <a class="page-link" href="/<%= i %>">
-                          <%= i %>
-                      </a>
-                  </li>
-              <% } %>
-              <li class="page-item">
-                  <a class="page-link" href="#">Next</a>
-              </li>
-          </ul>
-      </nav>
-  </div>
+    <!-- get all number item from database then page panigate -->
+    <nav aria-label="Page navigation" style="margin-left: 45%;">
+        <ul class="pagination">
+            <li class="page-item">
+                <a class="page-link" href="#">Previous</a>
+            </li>
+            <%for(var i=1; i<=numItems;i++) { %>
+                <li class="page-item">
+                    <a class="page-link" href="/<%= i %>">
+                        <%= i %>
+                    </a>
+                </li>
+            <% } %>
+            <li class="page-item">
+                <a class="page-link" href="#">Next</a>
+            </li>
+        </ul>
+    </nav>
 
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
   <script src="http://getbootstrap.com/dist/js/bootstrap.min.js"></script>
