--- a/views/addproduct.ejs
+++ b/views/addproduct.ejs
@@ -89,7 +89,7 @@
                 <div class="col-md-6">
                     <% for(var i=0;i<images.length; i++) {%>
                         <div class="col-sm-12 col-lg-6">
-                            <img src="products/<%= images[i].name %>" onclick="sendurl(this)" style="margin-top: 5px; width:100%">
+                            <img src="<%= images[i].name %>" onclick="sendurl(this)" style="margin-top: 5px; width:100%">
                         </div>
                     <% } %>
                 </div>
@@ -109,9 +109,10 @@
             var url = img.src;
             var filename = getImgName(url);
             document.getElementById('editProductImage').value = filename;
+            img.style.border = "1px solid black";
         }
 
     </script>
 </body>
-
 </html>
+
